<resources>
    <string name="app_name">Base App</string>
    <string name="bottom_app_bar_chevron_content_desc">Open or close bottom navigation drawer</string>
    <string name="bottom_app_bar_logo_content_desc">Reply logo</string>
    <string name="bottom_nav_drawer_profile_image_content_desc">profile avatar image</string>
    <string name="fab_compose_email_content_description">Compose new email</string>
    <string name="fab_reply_email_content_description">Reply to email</string>
    <string name="menu_item_forward">Forward</string>
    <string name="menu_item_reply">Reply</string>
    <string name="menu_item_reply_all">Reply all</string>
    <string name="menu_item_archive">Archive</string>
    <string name="menu_item_delete">Delete</string>
    <string name="menu_item_star">Star</string>
    <string name="menu_item_search">Search</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_character_list">Characters</string>
    <string name="menu_favorites">Favorites</string>
    <string name="bookmark_error">Something went wrong, please try again.</string>
    <string name="bookmark_success">Character bookmarked successfully</string>
    <string name="un_bookmark_success">Character bookmarked removed successfully</string>
    <string name="fragment_characters_title_label">Characters</string>
    <string name="fragment_character_detail_title_label">Character Detail</string>
    <string name="character_list_label_last_known_location">"Last known location: "</string>
    <string name="character_gender_label">Gender:</string>
    <string name="character_species_label">Species:</string>
    <string name="character_location_label">Location:</string>
    <string name="character_status_label">Status:</string>
    <string name="menu_dark_theme_light">Light</string>
    <string name="menu_dark_theme_dark">Dark</string>
    <string name="menu_dark_theme_battery_saver">Set by Battery Saver</string>
    <string name="menu_dark_theme_system_default">System default</string>
    <string name="navigation_inbox">Inbox</string>
    <string name="navigation_starred">Starred</string>
    <string name="navigation_sent">Sent</string>
    <string name="navigation_trash">Trash</string>
    <string name="navigation_spam">Spam</string>
    <string name="navigation_drafts">Drafts</string>
    <string name="email_sender_profile_content_desc">Profile image of sender</string>
    <string name="navigate_back_icon_content_desc">Navigate back</string>
    <string name="email_recipient_to">To %1$s</string>
    <string name="email_card_transition_name">email_card_%1$s</string>
    <string name="email_card_detail_transition_name">email_card_detail</string>
    <string name="compose_close_content_desc">Close editing email</string>
    <string name="compose_send_content_desc">Send email</string>
    <string name="compose_add_recipient_icon_content_desc">Add recipient</string>
    <string name="compose_subject_hint">Subject</string>
    <string name="compose_body_hint">New message…</string>
    <string name="compose_recipient_group_content_desc">Recipients</string>
    <string name="search_suggestion_hint">Search email</string>
    <string name="search_suggestion_title_yesterday">YESTERDAY</string>
    <string name="search_suggestion_title_this_week">THIS WEEK</string>
    <string name="action_settings">Settings</string>
    <string name="nav_header_subtitle">rasel@asabd.org</string>
    <string name="nav_header_title">rasel</string>
    <string name="nav_header_desc">rasel picture</string>
    <string name="menu_filter_by_grow_zone" translation_description="The label for the menu item to filter the displayed plants by grow zone.">Filter by grow zone</string>
    <string name="my_garden_title" translation_description="Title for the 'My garden' screen where the user can see the list of plants that have been added to their garden.">My garden</string>
    <string name="plant_list_title" translation_description="Title for the plant list screen where the user can see a list of plants available to add to their garden.">Plant list</string>
    <string name="available" translation_description="Text for the header of the plant list page indicating the available plants for users to choose from.">Available Plants</string>
    <string name="plant_details_title" translation_description="Title for the plant details screen where the user can see the details for a specific plant.">Plant details</string>
    <string name="add_plant" translation_description="Button text that prompts user to navigate to the Plant List to add plants to their empty garden.">Add plant</string>
    <string name="added_plant_to_garden" translation_description="Confirmation text that is shown when a user adds a plant to their empty garden.">Added plant to garden</string>
    <string name="garden_empty" translation_description="Text that is shown on the 'My Garden' screen when no plants have been added to the user's garden">Your garden is empty</string>
    <string name="plant_date_header" translation_description="Text that is shown on each plant on the 'My Garden' screen which says the word Planted to show date of planting below">Planted</string>
    <string name="watered_date_header" translation_description="Text that is shown on each plant on the 'My Garden' screen which says the word Last Watered to show date of last watering below">Last Watered</string>
    <string name="menu_item_share_plant" translation_description="The label for the Share menu item">Share</string>
    <string name="share_text_plant" translation_description="The default messaged used when sharing a plant on SNS, etc.">Check out the %s plant in the Android Sunflower app</string>
    <string name="gallery_title" translation_description="Title for the photo gallery screen">Photos by Unsplash</string>
    <string name="watering_needs_prefix" translation_description="Prefix for the text describing how often a plant should be watered. Used in combination with watering_needs_suffix.">Watering needs</string>
    <plurals name="watering_needs_suffix">
        <item quantity="one" translation_description="Suffix for the text describing how often a plant should be watered, singular. Used in combination with watering_needs_prefix: 'Watering needs: every day'.">every day</item>
        <item quantity="other" translation_description="Suffix for the text describing how often a plant should be watered, plural. Used in combination with watering_needs_prefix: 'Watering needs: every 8 days'.">every %d days</item>
    </plurals>
    <plurals name="watering_next">
        <item quantity="one" translation_description="Text indicating when the the plant should next be watered, singular. Used in conjunction with last watered date. 'May 24, 2018 - water tomorrow.'.">water tomorrow.</item>
        <item quantity="other" translation_description="Text indicating when the the plant should next be watered, plural. Used in conjunction with last watered date. 'May 24, 2018 - water in 8 days.'.">water in %d days.</item>
    </plurals>
    <string name="a11y_plant_item_image" translation_description="Accessibility text for each of the plant images shown in the 'My garden' and 'Plant list' screens.">Picture of plant</string>
    <string name="gallery_content_description" translation_description="Content description for the clickable image to navigate to the gallery screen">Navigate to gallery screen</string>
    <string name="plant_detail_image_content_description" translation_description="Content description for the header / hero image that is show at the top of the plant detail screen.">Image of plant</string>
    <string name="menu_plantList">Plants</string>
    <string name="action_logOut">Log Out</string>
    <string name="titleLogOut">Log Out !</string>
    <string name="messageLogOut">Are you sure you want to Log Out ?</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="permission_title">Oops! You\'ve denied the permission</string>
    <string name="write_permission_request">I need storage permission, to save the media file to your storage.\nWithout the permission I cannot save your file.</string>
    <string name="no_data_found">No data found</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>
    <string name="media_url_dash"><![CDATA[https://www.youtube.com/api/manifest/dash/id/bf5bb2419360daf1/source/youtube?as=fmp4_audio_clear,fmp4_sd_hd_clear&sparams=ip,ipbits,expire,source,id,as&ip=0.0.0.0&ipbits=0&expire=19000000000&signature=51AF5F39AB0CEC3E5497CD9C900EBFEAECCCB5C7.8506521BFC350652163895D4C26DEE124209AA9E&key=ik0]]></string>
    <string name="title_schedule" translation_description="The title for the schedule screen where user can see their schedule for Google I/O.">Schedule</string>
    <string name="title_home" translation_description="The title for the Home screen where user can all the updates from Google I/O team.">Home</string>
    <string name="title_map" translation_description="The title for the map screen where user can see the map of the venue.">Map</string>
    <string name="title_explore_io" translation_description="The title for the Augmented reality exploration screen where the user can explore the I/O venue in AR.">Explore I/O</string>
    <string name="title_info" translation_description="The title for the info screen where user can see various information, such as FAQ and travel info.">Info</string>
    <plurals name="filter_event_count" translation_description="A label showing how many events match the current filters">
        <item quantity="one">%1$d Event</item>
        <item quantity="other">%1$d Events</item>
    </plurals>
    <string name="starred_and_reserved">Your starred and reserved events</string>
    <string name="starred_and_reserved_short">Your events</string>
    <string name="search_schedule_hint" translation_description="Text field hint that is shown when user has not entered a search query">Search the schedule</string>
    <string name="search_schedule_no_results" translation_description="Text that is shown if there are no search results">No results found</string>
    <string name="session_duration_location" translatable="false">%1s / %2s</string>
    <string name="agenda" translation_description="The title for the agenda screen where user can see all the sessions they plan to attend.">Agenda</string>
    <string name="agenda_duration" translatable="false">%1$s – %2$s</string>
    <string name="event_starred" translation_description="The message shown when user adds an event to their schedule.">Event added to your starred items</string>
    <string name="event_unstarred" translation_description="The message shown when user removes an event from their schedule.">Event removed from starred items</string>
    <string name="faq_title" translation_description="The title for the tab that shows FAQ.">FAQ</string>
    <string name="owl">Owl</string>
    <string name="i_understand">I Understand</string>
    <string name="terms_insurance">Paperfly shall liable to compensate based on mutual discussion up to 50% of Production or Manufactural cost, but not exceeding BDT 10,000’’. If any product is partially damaged and which is repairable, Paperfly will compensate for the repairing cost of such damage. And 5% additional charge imposed for insurance. To avail of it, please select “Get Insurance</string>
    <string name="get_insurance">Get Insurance</string>
</resources>