<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/asl_my_courses"
            android:title="Emails" />

        <item
            android:id="@+id/nav_plantListFragment"
            android:icon="@drawable/asl_my_courses"
            android:title="@string/menu_plantList" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/asl_featured"
            android:title="@string/menu_slideshow" />
        <item
            android:icon="@drawable/asl_my_courses"
            android:title="@string/owl" />
        <item
            android:icon="@drawable/asl_search"
            android:title="@string/menu_character_list" />

    </group>
</menu>