<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_fag"
        android:orderInCategory="100"
        android:title="@string/faq_title"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_image_slider"
        android:orderInCategory="100"
        android:title="Image Slider"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_scroll_view"
        android:orderInCategory="100"
        android:title="Scroll View"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logOut"
        android:orderInCategory="100"
        android:title="@string/action_logOut"
        app:showAsAction="never" />
</menu>