<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/view"
            android:layout_width="50dp"
            android:layout_height="5dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_non_active_verify_button" />

        <RelativeLayout
            android:id="@+id/ll_top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/get_insurance"
                android:textColor="@color/red"
                android:textSize="16sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tv_details_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll_top_bar"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:padding="12dp"
            android:text="@string/terms_insurance"
            android:textSize="12sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_continue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_details_title"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
            android:enabled="true"
            android:text="@string/i_understand"
            app:icon="@null" />
    </RelativeLayout>


</layout>