<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_settings">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.rasel.androidbaseapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_nav_home_to_nav_gallery"
            app:destination="@id/nav_gallery" />
    </fragment>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.rasel.androidbaseapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.rasel.androidbaseapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_plantListFragment"
        android:name="com.rasel.androidbaseapp.ui.plant_list.PlantListFragment"
        android:label="PlantListFragment"
        tools:layout="@layout/fragment_plant_list">
        <action
            android:id="@+id/action_plantListFragment_to_plantDetailFragment"
            app:destination="@id/nav_plantDetailFragment" />
        <action
            android:id="@+id/action_nav_plantListFragment_to_characterDetailFragment"
            app:destination="@id/characterDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_plantDetailFragment"
        android:name="com.rasel.androidbaseapp.ui.plant_details.PlantDetailFragment"
        android:label="PlantDetailFragment"
        tools:layout="@layout/fragment_plant_detail">

        <action
            android:id="@+id/action_plant_detail_fragment_to_gallery_fragment"
            app:destination="@id/gallery_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />

        <argument
            android:name="plantId"
            app:argType="string" />

    </fragment>

    <fragment
        android:id="@+id/gallery_fragment"
        android:name="com.rasel.androidbaseapp.ui.gallery.GalleryFragment"
        android:label="@string/plant_details_title"
        tools:layout="@layout/fragment_gallery">
        <argument
            android:name="plantName"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.rasel.androidbaseapp.ui.settings.SettingsFragment"
        android:label="Settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_character_list"
        android:name="com.rasel.androidbaseapp.ui.characterlist.CharacterListFragment"
        android:label="@string/fragment_characters_title_label"
        tools:layout="@layout/fragment_character_list">
        <action
            android:id="@+id/action_characterListFragment_to_characterDetailFragment"
            app:destination="@id/characterDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/characterDetailFragment"
        android:name="com.rasel.androidbaseapp.ui.characterdetail.CharacterDetailFragment"
        android:label="@string/fragment_character_detail_title_label"
        tools:layout="@layout/fragment_character_detail">
        <argument
            android:name="character_id"
            android:defaultValue="0L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/nav_email_list"
        tools:layout="@layout/fragment_email_list"
        android:name="com.rasel.androidbaseapp.ui.email_list.EmailListFragment"
        android:label="HomeFragment">
        <!-- <argument
             android:name="mailbox"
             android:defaultValue="INBOX"
             app:argType="com.materialstudies.reply.ui.home.Mailbox" />-->
        <action
            android:id="@+id/action_homeFragment_to_emailFragment"
            app:destination="@id/emailFragment" />
        <action
            android:id="@+id/action_nav_email_list_to_composeFragment"
            app:destination="@id/composeFragment" />
    </fragment>
    <fragment
        android:id="@+id/emailFragment"
        tools:layout="@layout/fragment_email"
        android:name="com.rasel.androidbaseapp.ui.email.EmailFragment"
        android:label="EmailFragment">
        <argument
            android:name="emailId"
            app:argType="long" />
    </fragment>
    <fragment
        android:id="@+id/composeFragment"
        tools:layout="@layout/fragment_compose"
        android:name="com.rasel.androidbaseapp.ui.compose.ComposeFragment"
        android:label="ComposeFragment">
        <argument
            android:name="replyToEmailId"
            android:defaultValue="-1L"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/owl_onboarding"
        android:name="com.rasel.androidbaseapp.ui.owl_onboarding.OwlOnboardingFragment"
        android:label="fragment_onboarding"
        tools:layout="@layout/fragment_owl_onboarding">
        <action
            android:id="@+id/action_owl_onboarding_to_featured"
            app:destination="@id/featured"
            app:popUpTo="@+id/featured"/>
        <action
            android:id="@+id/action_owl_onboarding_to_search"
            app:destination="@id/search" />
        <action
            android:id="@+id/action_owl_onboarding_to_myCourses"
            app:destination="@id/myCourses" />
        <action
            android:id="@+id/action_owl_onboarding_to_lessonsSheetFragment"
            app:destination="@id/lessonsSheetFragment" />
    </fragment>

    <fragment
        android:id="@+id/myCourses"
        android:name="com.rasel.androidbaseapp.ui.mycourses.MyCoursesFragment"
        android:label="fragment_my_courses"
        tools:layout="@layout/fragment_my_courses">
        <action
            android:id="@+id/action_mycourses_to_learn"
            app:destination="@id/learn"
            app:exitAnim="@null"/>
    </fragment>

    <fragment
        android:id="@+id/featured"
        android:name="com.rasel.androidbaseapp.ui.featured.FeaturedFragment"
        android:label="fragment_featured"
        tools:layout="@layout/fragment_featured">
        <action
            android:id="@+id/action_featured_to_learn"
            app:destination="@id/learn"
            app:exitAnim="@null"/>
        <!--app:exitAnim="@anim/shrink_fade_out_center"-->
    </fragment>

    <fragment
        android:id="@+id/search"
        android:name="com.rasel.androidbaseapp.ui.search.SearchFragment"
        android:label="fragment_search"
        tools:layout="@layout/fragment_search"/>

    <fragment
        android:id="@+id/learn"
        android:name="com.rasel.androidbaseapp.ui.learn.LearnFragment"
        android:label="fragment_learn"
        tools:layout="@layout/fragment_learn">
        <argument
            android:name="course_id"
            app:argType="long"/>
    </fragment>

    <fragment
        android:id="@+id/lessonsSheetFragment"
        android:name="com.rasel.androidbaseapp.ui.lessons.LessonsSheetFragment"
        android:label="fragment_lessons_sheet"
        tools:layout="@layout/fragment_lessons_sheet">
        <action
            android:id="@+id/action_lessons_sheet_to_lesson"
            app:launchSingleTop="true"
            app:destination="@+id/lesson"/>
    </fragment>

    <fragment
        android:id="@+id/lesson"
        android:name="com.rasel.androidbaseapp.ui.lessons.LessonFragment"
        android:label="fragment_lesson"
        tools:layout="@layout/fragment_lesson">
        <argument
            android:name="course_id"
            app:argType="long"/>
        <argument
            android:name="step_number"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/counter_fragment"
        android:name="com.rasel.androidbaseapp.ui.counter.CounterFragment"
        tools:layout="@layout/fragment_counter"
        android:label="CounterFragment" />

    <action android:id="@+id/action_global_nav_home" app:destination="@id/nav_home"/>
    <action android:id="@+id/action_global_owl_onboarding" app:destination="@id/owl_onboarding"/>
    <action android:id="@+id/action_global_counter_fragment" app:destination="@id/counter_fragment"/>

</navigation>